test/Fail/IrrelevantVar.err
IrrelevantVar.agda:8.9-10: error: [VariableIsIrrelevant]
Variable x is declared irrelevant, so it cannot be used here
when checking that the expression x has type A
